# actions-ftx-auto-stake

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: stake.yml
src/: app.py
