[tool.poetry]
name = "actions-ftx-auto-stake"
version = "0.1.0"
description = ""
authors = ["bankruptko <bankruptko@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
