[tool.poetry]
name = "actions-ftx-auto-stake"
version = "0.1.0"
description = ""
authors = ["bankruptko <bankruptko@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ftx = "^1.0.2"
ciso8601 = "^2.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
